# tenex-edge

./: .gitignore  .gitmodules  .vercelignore  AGENTS.md  CLAUDE.md  Cargo.toml  M1.md  README.md  build.rs  index.html  justfile  vercel.json
.claude/skills/: mosaico  tenex-edge
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
assets/: style.css
containers/mosaico/: Containerfile  README.md  doctor  host-auth.bash  run
containers/tenex-edge/: Containerfile  README.md  doctor  host-auth.bash  run
containers/tenex-edge-opencode/: Containerfile  README.md  run
docs/: architecture-plan.md  daemon-design.md  daemon-rpc-messaging.md  daemon-rpc-session-lifecycle.md  daemon-rpc-surface.md  fabric-architecture-implementation.md  fabric-architecture-overview.md  fabric-architecture.md  harness-integration.md  install.md  session-state.md  state-schema.md  tail-v2-design.md  trellis-adoption.md  trellis-authority-frontier-case-study.md  trellis-mapping.md
docs/product-spec/: agent-society.md  bets-and-open-questions.md  ecosystem.md  first-principles.md  glossary.md  index.md  principles-and-tenets.md  prior-art.md  problem-space.md  roadmap.md  scope-two-products.md  trust-and-safety.md  value-layers.md  vision.md
docs/wiki/: AGENTS.md  _index.md  disk-cleanup.md  loop-command.md  opencode-configuration.md  tenex-branch-management.md  tenex-edge-activity-distillation.md  tenex-edge-awareness.md  tenex-edge-channels.md  tenex-edge-codex-hook-integration.md  tenex-edge-configuration.md  tenex-edge-daemon.md  tenex-edge-data-persistence.md  tenex-edge-debug-transcript.md  tenex-edge-design-philosophy.md  tenex-edge-domain-acl.md  tenex-edge-fabric-architecture.md  tenex-edge-hook-install.md  tenex-edge-hook-output-rendering.md  tenex-edge-hook-subcommand.md  tenex-edge-host-adapter.md  tenex-edge-identity.md  tenex-edge-inbox-display.md  tenex-edge-install.md  tenex-edge-messaging.md  tenex-edge-model-configuration.md  tenex-edge-nip29-groups.md  tenex-edge-phased-build.md  tenex-edge-presence.md  tenex-edge-project-management.md  tenex-edge-proposals.md  tenex-edge-read-model.md  tenex-edge-relay-configuration.md  tenex-edge-relay-ingest.md  tenex-edge-remote-deployment.md  tenex-edge-session-display.md  tenex-edge-session-management.md  tenex-edge-session-resumption.md  tenex-edge-session-spawn-race.md  tenex-edge-session-title.md  (+22 more)
e2e/: README.md  lib.sh  run-ordinal.sh  run-pty.sh  run-subgroup.sh  run-warm.sh  run.sh  teardown.sh
e2e/fixtures/: claude
integrations/: mosaico-distill.py  tenex-edge-distill.py
integrations/claude-code/: settings.template.json  te-hook.py
integrations/codex/: AGENTS.md  README.md  config.template.toml  te-hook.py
integrations/goose/: plugin.json
integrations/grok/: user-settings.template.json
integrations/opencode/: mosaico.ts  tenex-edge.ts
licenses/: Croissant-MIT.txt
plans/launch-named-command-picker/: index.html
plans/truthful-channel-awareness/: index.html
scripts/: check_integration_helpers.sh  check_loc.sh  check_loc_test.sh  demo-claude.sh  demo.sh  distill_experiment.py  e2e-headless-resume.sh  install-fleet  loc_violations.txt  reset.sh
scripts/git-hooks/: pre-commit
scripts/tests/: install-fleet.sh
site/: build.mjs  index.html  site.js  styles.css  test.mjs
skills/mosaico/: SKILL.md
skills/mosaico-dev/: SKILL.md  lessons
skills/mosaico-setup/: SKILL.md
skills/tenex-edge/: SKILL.md
skills/tenex-edge-dev/: SKILL.md  lessons
src/: acl.rs  agent_about.rs  agent_catalog.rs  agent_inventory.rs  applog.rs  attachment.rs  channel_about.rs  channel_name.rs  channel_nudge.rs  channel_ref.rs  cli.rs  command_forensics.rs  config.rs  console_style.rs  delivery_seam.rs  distill.rs  domain.rs  expired_sessions.rs  explain.rs  fabric_context.rs  goose_integration.rs  host_env.rs  identity.rs  idref.rs  injection.rs  instrument.rs  lib.rs  liveness.rs  llmconfig.rs  logging.rs  main.rs  nmp_host.rs  outbox_seam.rs  presence_publisher.rs  profile.rs  project.rs  pty.rs  relay_log.rs  replay_capsules.rs  retry_queue.rs  (+20 more)
src/agent_catalog/: activation.rs  parse.rs  removal.rs  tests.rs
src/agent_inventory/: tests.rs
src/attachment/: tests.rs
src/channel_nudge/: tests.rs
src/cli/: acp_smoke.rs  admin.rs  args.rs  channel_move.rs  command_forensics.rs  config.rs  context.rs  daemon_lifecycle.rs  debug.rs  dispatch.rs  doctor.rs  explain.rs  harness.rs  hooks.rs  install.rs  interactive.rs  launch_cli.rs  local_relay.rs  mcp.rs  messaging.rs  my.rs  pty.rs  relay.rs  resume.rs  session.rs  session_catalog.rs  statusline.rs  tmux_cli.rs  tui.rs  turn.rs  uninstall.rs  validate.rs  who.rs
src/codec/: kind1.rs  mod.rs
src/config/: available_harnesses.rs  harness_detection.rs  (+2 more)
tests/: daemon_integration.rs  daemon_mechanics.rs  e2e_transport.rs  help.rs  install_standalone.rs  nip29_probe.rs  relay_probe.rs  seed_validation.rs
(+2426 files in other folders)
