[package]
name = "tenex-edge"
version = "0.1.0"
edition = "2021"
description = "Citizenship for your agents: durable identity + awareness on the Nostr fabric, host-neutral."

[[bin]]
name = "tenex-edge"
path = "src/main.rs"

[lib]
name = "tenex_edge"
path = "src/lib.rs"

[dependencies]
nostr-sdk = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "process", "io-util", "io-std", "net"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"
dialoguer = "0.11"
owo-colors = { version = "4", features = ["supports-colors"] }
rig = { package = "rig-core", version = "0.37" }
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
regex = "1"
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm_0_28", "macros"] }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
