[package]
name = "mosaico"
version = "0.1.0"
edition = "2021"
description = "Identity and awareness fabric for coding agents: durable, self-owned identity and live @mentions across Claude Code, Codex, OpenCode, and Grok."
license = "MIT"
keywords = ["agents", "coding-agents", "nostr", "nip29", "cli"]

[[bin]]
name = "mosaico"
path = "src/main.rs"

[lib]
name = "mosaico"
path = "src/lib.rs"

[dependencies]
nostr-sdk = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "process", "io-util", "io-std", "net", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
anyhow = "1"
axum = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
fuzzy-matcher = "0.3"
owo-colors = { version = "4", features = ["supports-colors"] }
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
mime_guess = "2"
nmp = { version = "=0.1.0", git = "https://github.com/pablof7z/nmp.git", rev = "9a8ad1fd1a2999b067c19d842467a76a257f7f25" }
nmp-nip29 = { version = "=0.1.0", git = "https://github.com/pablof7z/nmp.git", rev = "9a8ad1fd1a2999b067c19d842467a76a257f7f25" }
regex = "1"
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm_0_28", "macros"] }
hmac = "0.12"
sha2 = "0.10"
shlex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
portable-pty = "0.9"
toml = "0.9"
unicode-width = "0.2"
url = "2"
[dev-dependencies]
tempfile = "3"
